Enhance update-graph workflow with manual trigger
Updated workflow to allow manual triggering and fixed permissions for the bot to push changes. Improved commit logic to only commit if the graph file has changed.

--- a/.github/workflows/update-graph.yml
+++ b/.github/workflows/update-graph.yml
@@ -3,7 +3,11 @@ name: Update Strike Graph
 on:
   push:
     paths:
-      - 'data.json' # Only run when data changes
+      - 'data.json' # Triggers only when you update data
+  workflow_dispatch: # Allows you to run it manually from Actions tab to test
+
+permissions:
+  contents: write  # 🔑 CRITICAL FIX: Allows bot to push changes
 
 jobs:
   build:
@@ -17,8 +21,7 @@ jobs:
           python-version: '3.9'
           
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install svgwrite
           
       - name: Generate Graph
         run: python generate.py
@@ -28,5 +31,5 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add progress.svg
-          git commit -m "📊 Updated focused hours graph" || exit 0
-          git push
+          # Only commit if the file actually changed
+          git diff --quiet && git diff --staged --quiet || (git commit -m "📊 Update graph" && git push)
